[package]
name = "enr_ecdsa_nonce_generating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3.4"
secp256k1 = { version = "0.24.0", features = ["global-context", "std", "rand-std"]}
k256 = "0.11.5"
enr = { version = "0.6.2", features = ["k256", "rust-secp256k1"]}
